@@ -1,3 +1,3 @@
 system.port=9000
-system.users=fnords
+system.users=example
 system.md5=1
