@@ -1,3 +1,8 @@
+# This is an example configuration file for shroudBNC's TCL module
+# It will be sourced whenever you (re-)load the tcl module or
+# use the tcl command 'rehash' (e.g. /sbnc tcl :rehash)
+
+# You should not modify this block
 source "scripts/namespace.tcl"
 source "scripts/timers.tcl"
 source "scripts/misc.tcl"
@@ -7,15 +12,19 @@ source "scripts/pushmode.tcl"
 source "scripts/bind.tcl"
 source "scripts/usys.tcl"
 source "scripts/socket.tcl"
+source "scripts/iface.tcl"
 source "scripts/botnet.tcl"
 
+# Load some useful procs
 source "scripts/alltools.tcl"
 
-#setctx "fnords"
+#setctx "example"
 #source "scripts/tcl.tcl"
 
-#set ::account354 "fnords"
+#set ::account354 "example"
 #source "scripts/account.tcl"
 
-#set ::versionreply "fnords"
+#set ::versionreply "example"
 #source "scripts/version.tcl"
+
+#source "scripts/partyline.tcl"
