@@ -1,10 +1,0 @@
-#include "StdAfx.h"
-#include "SimpleIRCConnection.h"
-
-CSimpleIRCConnection::CSimpleIRCConnection(SOCKET Socket) {
-	m_Socket = Socket;
-}
-
- CSimpleIRCConnection::~CSimpleIRCConnection(void)
-{
-}
