@@ -1,8 +1,6 @@
 user.password=fc5e038d38a57032085441e7fe7010b0
-user.server=dk.quakenet.org
-user.port=6667
-user.nick=fnord23
-user.realname=shroud
-user.channels=#shroudtest2
 user.admin=1
-user.awaynick=fnord
+user.nick=exampleuser
+user.server=irc.quakenet.org
+user.port=6667
+user.realname=I should've edited my configuration files
